backend/deploy/kustomize/components/api_server/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dinner-done-better-service-api-deployment
  labels:
    app: dinner-done-better-backend
    app.kubernetes.io/name: dinner-done-better-backend
spec:
  progressDeadlineSeconds: 1200
  selector:
    matchLabels:
      app: dinner-done-better-backend
      app.kubernetes.io/name: dinner-done-better-backend
  replicas: 1
  template:
    metadata:
      labels:
        app: dinner-done-better-backend
        app.kubernetes.io/name: dinner-done-better-backend
    spec:
      containers:
        # this is the API server container
        - name: dinner-done-better-service-api
          image: dinner-done-better-service-api
          args: ["serve"]
          imagePullPolicy: Always
          volumeMounts:
            - name: "config"
              mountPath: "/etc/service-config.json"
              subPath: "config.json"
          ports:
            - containerPort: 8000
              name: http
            - containerPort: 8001
              name: grpc
          livenessProbe:
            httpGet:
              path: "/_ops_/live"
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: "/_ops_/ready"
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 5
      volumes:
        - name: "config"
          configMap:
            name: "dinner-done-better-service-api-config"
---
