backend/deploy/kustomize/components/api_server/service.yaml
---

apiVersion: v1
kind: Service
metadata:
  name: dinner-done-better
  namespace: localdev
spec:
  ports:
  - name: http
    port: 8000
    protocol: TCP
    targetPort: http
  type: ClusterIP
---
